--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
     "name": "Frog Controller",
     "version": "0.1",
     "permissions": [
-        "tabs"
+        "tabs",
+        "*://*/*"
     ],
     "browser_action": {
         "default_title": "",
